# color-quarry

./: CMakeLists.txt  README.md  builder.sh  commiter.sh  main.cpp
inc/: ant.hpp  command.hpp  commons.hpp  region.hpp  resources.hpp  simulation.hpp
src/: .#pathfinder.cpp  ant.cpp  commons.cpp  region.cpp  simulation.cpp
